2006-04-16  Chris Morley <ob@gaseq.co.uk>

	* INSTALL.Windows, windows: Updated Windows build files for Visual
	C++ VC6 and VC8 for 2.0.1 release.

	* Makefile.am, Makefile.in: Remove windows-vc2005 from list for
	distribution.

2006-04-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* test/Makefile.am, test/Makefile.in: Only run CML tests if XML
	formats were compiled. (i.e., if libxml not available, can't test
	CML)
	
	* test/ringtest.sh, test/smartstest.sh, test/cmltest/test.sh:
	Minor shell script portability fixes.

2006-04-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/perl/META.yml, scripts/python/setup.py: Packaging
	changes for the scripting wrappers.
	
	* src/formats/mdlformat.cpp: Remove inadvertent debug statement
	left from yesterday.

2006-04-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/mdlformat.cpp (ReadMolecule): Add support for atom
	stereo in v2000 format and OBChiralData. Partly addresses
	PR#1463796.

	* src/formats/smilesformat.cpp (GetChiralStereo): If we have a 2D
	molecule and stereochemistry is unspecified, don't assume we have
	a particular stereochemistry. Partly address PR#1463796.
	Also fix a problem with writing chiral "H" designations with explicit
	hydrogens, introduced with yesterday's fix to
	OBAtom::ImplicitHydrogenCount.

2006-04-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/obconversion.h, src/obconversion.cpp: Added a test to be
	sure that we do not check gzip encoding multiple times (much less
	try to gzip repeatedly). Fix PR#1465586 where ReadString() or
	ReadFile() followed by Read() will fail because input streams are
	closed prematurely.

	* src/atom.cpp (ImplicitHydrogenCount): Fix a bug where formulas
	were calculated incorrectly -- explicit hydrogens should count
	against an implicit hydrogen count too. Fixes part of PR#1463787.
	(i.e., SMARTS 'h' token was matching total number of hydrogens)

	* src/mol.cpp (AddBond): Fix a bug exposed by PDB parsing, where